# ai-quarantine

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Containerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: appliance-profile.yaml  models.lock.yaml  policy.yaml  sources.allowlist.yaml  standalone-profile.yaml
quarantine/: __init__.py  audit_chain.py  pipeline.py  watcher.py
tests/: test_pipeline.py
